Changes: 1. Enhanced Pair with more methods, and changed it to class. 2. Now Maybe has been renamed as TriVariant, with more methods. 3. Optimized most String#formatted usage to DefinitionUtils#quickFormat, or MessageFormatter#arrayFormat 4. Enhanced IMarkLogger with MarkLogger#STACK_WALKER, making static factories simpler.
Signed-off-by: Kurv Cygnus <2052405063@qq.com>